This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: More misspellings, mostly in source code.
Type: behavior Stage: resolved
Components: Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: terry.reedy Nosy List: terry.reedy
Priority: normal Keywords: patch

Created on 2018-02-02 05:55 by terry.reedy, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 5144 merged elopio, 2018-02-02 05:56
PR 5520 merged miss-islington, 2018-02-04 00:37
PR 5522 merged terry.reedy, 2018-02-04 01:38
Messages (4)
msg311476 - (view) Author: Terry J. Reedy (terry.reedy) * (Python committer) Date: 2018-02-02 05:55
This is similar to #32297.  I intend to backport, if not too much problem, for the reason Victor gave on the PR 4803: "to reduce conflicts when backporting fixes into Python 3.6."

I propose to not backport to Python 2.7, again for the reason Victor gave: "since Python 2.7 is dying and minor fixes are no more backported to 2.7."
msg311577 - (view) Author: Terry J. Reedy (terry.reedy) * (Python committer) Date: 2018-02-04 00:36
New changeset c3d9508ff22ece9a96892b628dd5813e2fb0cd80 by Terry Jan Reedy (Leo Arias) in branch 'master':
bpo-32746: Fix multiple typos (GH-5144)
https://github.com/python/cpython/commit/c3d9508ff22ece9a96892b628dd5813e2fb0cd80
msg311579 - (view) Author: Terry J. Reedy (terry.reedy) * (Python committer) Date: 2018-02-04 01:41
New changeset e86db34dd3b43dc9c9beb21a82cd2c3b7c4c05df by Terry Jan Reedy (Miss Islington (bot)) in branch '3.7':
[3.7] bpo-32746: Fix multiple typos (GH-5144) (GH-5520)
https://github.com/python/cpython/commit/e86db34dd3b43dc9c9beb21a82cd2c3b7c4c05df
msg311581 - (view) Author: Terry J. Reedy (terry.reedy) * (Python committer) Date: 2018-02-04 02:00
New changeset c90a5dec03fbef3a26479c800d5d6d15c44d5afb by Terry Jan Reedy in branch '3.6':
[3.6] bpo-32746: Fix multiple typos (GH-5144) (GH-5522)
https://github.com/python/cpython/commit/c90a5dec03fbef3a26479c800d5d6d15c44d5afb
History
Date User Action Args
2022-04-11 14:58:57adminsetgithub: 76927
2018-02-04 02:01:12terry.reedysetstatus: open -> closed
type: behavior
resolution: fixed
stage: patch review -> resolved
2018-02-04 02:00:26terry.reedysetmessages: + msg311581
2018-02-04 01:41:46terry.reedysetmessages: + msg311579
2018-02-04 01:38:24terry.reedysetpull_requests: + pull_request5351
2018-02-04 00:37:21miss-islingtonsetpull_requests: + pull_request5350
2018-02-04 00:36:14terry.reedysetmessages: + msg311577
2018-02-02 05:56:12elopiosetkeywords: + patch
stage: commit review -> patch review
pull_requests: + pull_request5323
2018-02-02 05:55:26terry.reedycreate