bpo-32746: Fix multiple typos (GH-5144)

Fix typos found by codespell in docs, docstrings, and comments.